# aicred

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .kilocodemodes  .roomodes  AUDIT_SUMMARY.md  BUSINESS_PLAN.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLIPPY_ANALYSIS.md  CODE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  FINAL_AUDIT.md  HYBRID_APPROACH.md  INTERNAL_MIGRATION_ANALYSIS.md  INTERNAL_MIGRATION_STATUS.md  MIGRATION_0.1_to_0.2.md  MIGRATION_0.1_to_0.2_UPDATED.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  MIGRATION_PROGRESS_UPDATE.md  MIGRATION_STATUS.md  Makefile  NEXT_STEPS.md  OPTION_B_FINDINGS.md  PHASE1_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PHASE_4_PROGRESS.md  PHASE_4_STEPS_2-3_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_PLAN.md  REFACTOR_STATUS.md  (+15 more)
.cargo/: config.toml
.github/workflows/: all-tests-passed.yml  ci.yml  coverage.yml  docs.yml  go.yml  gui.yml  python.yml  release.yml  security.yml
bindings/go/: IMPLEMENTATION.md  Makefile  README.md  go.mod  main  scan_result.json  test_windows_build.sh
bindings/go/aicred/: adapter.go  adapter_test.go  config.go  config_test.go  doc.go  errors.go  errors_test.go  genai_keyfinder.go  genai_keyfinder_ffi.go  genai_keyfinder_test.go  instance.go  instance_test.go  integration_test.go  label.go  label_test.go  model_registry.go  models.go  models_test.go  paths.go  paths_test.go  tag.go  tag_test.go  validation.go  validation_test.go
bindings/go/genai_keyfinder/: doc.go  genai_keyfinder.go  genai_keyfinder_test.go
bindings/python/: Cargo.toml  Makefile  README.md  aicred.pyi  genai_keyfinder.pyi  pyproject.toml
bindings/python/examples/: basic_usage.py  metadata_demo.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_aicred.py  test_genai_keyfinder.py
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/commands/: export.rs  labels.rs  list.rs  mod.rs  models.rs  providers.rs  scan.rs  setenv.rs  tags.rs  wrap.rs
cli/src/commands/wizard/: configure.rs  labels.rs  mod.rs  review.rs  scan.rs  summary.rs  ui.rs
cli/src/output/: json.rs  mod.rs  ndjson.rs  summary.rs  table.rs  utils.rs
cli/src/utils/: mod.rs  provider_loader.rs
cli/tests/: cli_tests.rs  setenv_integration_tests.rs  tagging_integration_tests.rs  wizard_tests.rs  wrap_integration_tests.rs
conf/labels/: fast.scan  smart.scan
core/: Cargo.toml
core/src/: env_resolver.rs  error.rs  export.rs  lib.rs  scanners.rs
core/src/discovery/: claude_desktop.rs  gsh.rs  langchain.rs  mod.rs  ragit.rs  roo_code.rs
core/src/models/: config_instance.rs  config_validator.rs  credentials.rs  credentials_new.rs  discovered_key.rs  label.rs  label_assignment.rs  labels.rs  labels_new.rs  migration.rs  mod.rs  model.rs  model_metadata.rs  model_registry.rs  models.rs  models_new.rs  provider.rs  provider_config.rs  provider_instance.rs  provider_instances.rs  provider_key.rs  providers.rs  providers_new.rs  scan.rs  scan_result.rs  tag.rs  tag_assignment.rs  tests.rs  unified_label.rs
core/src/parser/: mod.rs
core/src/plugins/: mod.rs
core/src/providers/: anthropic.rs  aws_bedrock.rs  azure.rs  cohere.rs  deepinfra.rs  deepseek.rs  fireworks.rs  google.rs  grok.rs  groq.rs  huggingface.rs  litellm.rs  metadata.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  registry.rs  replicate.rs  together.rs  zai.rs
core/src/scanner/: mod.rs
core/src/scanners/: claude_desktop.rs  goose.rs  gsh.rs  langchain.rs  mod.rs  ragit.rs  roo_code.rs
core/src/utils/: mod.rs  provider_model_tuple.rs
core/tests/: architecture_validation_tests.rs  architecture_validation_tests.rs.bak  architecture_validation_tests.rs.bak2  architecture_validation_tests.rs.bak3  builtin_scanners_tests.rs  config_storage_tests.rs  env_var_api_tests.rs  id_consistency_integration_tests.rs  integration_tests.rs  migration_tests.rs  multi_key_tests.rs  parser_tests.rs  probe_scan_integration_tests.rs  proptests.proptest-regressions  proptests.rs  provider_probe_tests.rs  real_config_validation_tests.rs  refactor_regression_tests.rs  scanner_tests.rs  tagging_integration_tests.rs  validation_rewrite_tests.rs
core/tests/fixtures/: config.json  test.env  test_claude_desktop_config.json  test_gsh_config.gshrc  test_gsh_missing_keys.gshrc  test_invalid_config.json  test_roo_code_config.json
docs/: API_BASELINE.md  api-reference.md  architecture.md  ci-cd.md  coderabbit-setup.md  distribution.md  gui-usage-guide.md  installation.md  migration-guide.md  model-metadata.md  plugin-development.md  pre-refactor-deps.txt  public-api-baseline.txt  scanner-researcher-mode.md  scanner-specification-template.md  security.md  shell-export-guide.md  tagging-system-guide.md  test-baseline.txt  user-guide.md
docs/providers/: README.md
examples/: continue-dev-scanner-spec.md  custom-export-template.yaml  export-usage-examples.sh  goose-scanner-spec.md  ragit-scanner-spec.md  rust_basic.rs  rust_custom_plugin.rs  rust_filtered.rs
ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
ffi/include/: genai_keyfinder.h
ffi/src/: debug_test.rs  lib.rs
ffi/tests/: ffi_tests.rs
gui/: generate-icons.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: AssignmentModal.tsx  LabelAssignmentList.tsx  LabelManagement.tsx  ProviderList.tsx  ScanOptions.tsx  ScanResults.tsx  TagAssignmentList.tsx  TagManagement.tsx
gui/src/types/: tagging.ts
packaging/: README.md
packaging/chocolatey/: aicred.nuspec  genai-keyfinder.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: aicred.rb  genai-keyfinder.rb
packaging/linux/: install.sh  uninstall.sh
packaging/macos/: install.sh
packaging/windows/: installer.iss
scripts/: compatibility_layer.rs  migrate_imports.sh  release.sh  test_tagging_system.sh  validate_config.py
(+6 files in other folders)
