[workspace]
members = [
    "core",
    "ffi",
    "cli",
    "bindings/python",
    "gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["aicred contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robottwo/aicred"
homepage = "https://github.com/robottwo/aicred"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs-next = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
url = "2"

# Serialization formats
toml = "0.8"
serde_yaml = "0.9"

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Tauri (for GUI)
tauri = { version = "1.0", features = [] }
tauri-build = { version = "1.0", features = [] }

# FFI
libc = "0.2"
cbindgen = "0.26"

# CLI
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"