[package]
name = "genai-keyfinder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyfinder"
path = "src/main.rs"

[dependencies]
genai-keyfinder-core = { path = "../core" }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
dirs-next = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"