[package]
name = "aicred"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aicred"
path = "src/main.rs"

[dependencies]
aicred-core = { path = "../core" }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
anyhow = "1.0"
dirs-next = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"