[package]
name = "aicred-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for aicred - discovers AI API keys in configuration files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs-next = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { workspace = true, features = ["test-util"] }
proptest = "1.4"