[package]
name = "genai-keyfinder-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "genai_keyfinder"
crate-type = ["cdylib"]

[dependencies]
genai-keyfinder-core = { path = "../../core" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3"] }
serde_json = "1.0"
dirs-next = "2.0"
chrono = { version = "0.4", features = ["serde"] }