[package]
name = "aicred-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "aicred"
crate-type = ["cdylib"]

[dependencies]
aicred-core = { path = "../../core" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3"], optional = true }
serde_json = "1.0"
dirs-next = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["python"]
python = ["pyo3"]